--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,4 +1,4 @@
-.pf2e-saves-helper.saves-list {
+.pf2e-saves-helper .saves-list {
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -46,6 +46,13 @@
 	border-bottom: 1px solid var(--color-border-divider);
 }
 
+.pf2e-saves-helper .saves-buttons a {
+	background: none;
+	border-radius: 0px;
+	padding: 0 0 0 0;
+	outline: none;
+}
+
 .pf2e-saves-helper .saves-list-item .saves-roll {
 	flex: 0 0 32px;
 	height: 32px;
@@ -65,6 +72,10 @@
 
 .pf2e-saves-helper .saves-list-item .saves-roll-button:hover { 
 	color: var(--button-hover-background);
+}
+
+.pf2e-saves-helper .saves-list-item .saves-roll-button.no-display {
+	display: none;
 }
 
 .pf2e-saves-helper .saves-list-item .criticalFailure {
