--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -4,6 +4,10 @@
 	padding: 0;
 }
 
+.pf2e-saves-helper.pf2e.chat-card .card-header h3 {
+	margin: 0.5em 0 0.5em 0;
+}
+
 .pf2e-saves-helper .name-row {
 	cursor: pointer;
 	display: grid;
